k8/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keskonbouf-api
  labels:
    app: keskonbouf
spec:
  replicas: 1
  revisionHistoryLimit : 1
  selector:
    matchLabels:
      app: keskonbouf
  template:
    metadata:
      labels:
        app: keskonbouf
    spec:
      containers:
      - name: api
        image: cafetiere/keskonbouf_api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
