k8/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keskonbouf-front
  labels:
    app: keskonbouf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keskonbouf
  template:
    metadata:
      labels:
        app: keskonbouf
    spec:
      containers:
      - name: api
        image: keskonbouf_front:latest
        imagePullPolicy: Never
        ports:
        -containerPort: 8501
