k8/service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
  - port : 8000
    targetPort: 8000
    protocol : TCP
  selector:
    app: keskonbouf
