k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keskonbouf-front
spec:
  defaultBackend:
    service:
      name: keskonbouf-service
      port:
        number: 8501
