k8/ingress_api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 8000
